# gooroom-feedback-client

./: README.md  meson.build
config/: gooroom-feedback-client.conf
data/: gooroom-feedback-client.desktop.in  meson.build
debian/: changelog  control  install
po/: POTFILES  ko.po  meson.build
resources/: gooroom-feedback-client-dialog.ui  gooroom-feedback-client.css  gooroom-feedback-client.gresource.xml  gooroom-feedback-client.ui
src/: gooroom-feedback-client-application.c  gooroom-feedback-client-application.h  gooroom-feedback-client-dialog.c  gooroom-feedback-client-dialog.h  gooroom-feedback-client-history-view.c  gooroom-feedback-client-history-view.h  gooroom-feedback-client-main.c  gooroom-feedback-client-utils.c  gooroom-feedback-client-utils.h  gooroom-feedback-client-window.c  gooroom-feedback-client-window.h
