desktop = i18n.merge_file(
  input: 'gooroom-feedback-client.desktop.in',
  output: 'gooroom-feedback-client.desktop',
  type: 'desktop',
  po_dir: '../po',
  install: true,
  install_dir: '/usr/share/applications'
)

install_data('gooroom-feedback-client.svg',
  install_dir: '/usr/share/icons/hicolor/scalable/apps'
)
